# VTKUsersGuide

./: CLAUDE.md  INDEX.md  README.md
chapter02/: Chapter2.md
chapter03/: Chapter3.md  README.md
chapter03/examples/: Cone2.py  ImGuiCone.py  QtCone.py  TrameCone.py
chapter03/examples/Cone2Cxx/: CMakeLists.txt  Cone2.cxx
chapter03/examples/Cone2Java/: Cone2.java
chapter03/examples/Cylinder/: CMakeLists.txt  Cylinder.cxx
chapter03/examples/QtConeCxx/: CMakeLists.txt  QtCone.cxx
chapter03/images/: Figure_3-1.dot  Figure_3-2.py
chapter04/: Chapter4.md  ch4.md
chapter04/examples/: AnnotatePick.py  Assembly.py  CADPart.py  CubeAxes.py  Cylinder.py  FilterCADPart.py  ImplicitPlaneWidget.py  LabeledMesh.py  MultiLineText.py  ScalarBar.py  TPlane.py  TestText.py  TextOrigin.py  XYPlot.py  calculator.py  clip_sphere.py  threshold_data.py  write_data.py
chapter04/examples/Antialiasing/: Antialiasing.cxx  CMakeLists.txt
chapter04/examples/DepthPeeling/: CMakeLists.txt  DepthPeeling.cxx
chapter05/: Chapter5.md  ch5.md
chapter05/examples/: array_calculator.py  clip_cow.py  clip_volume.py  color_isosurface.py  color_mapping.py  connectivity.py  create_strip.py  cut_combustor.py  cut_unstructured.py  deci_fran.py  evenly_spaced_streamlines.py  extract_geometry.py  extract_ugrid.py  image_warp.py  office_tube.py  office_tubes.py  point_to_cell_data.py  probe_comb.py  python_filter.py  python_source.py  resample_to_image.py  smooth_fran.py  spike_fran.py  stream_surface.py  subsample_grid.py  texture_coords.py  threshold.py  vis_quad.py  warp_comb.py  warp_scalar.py  warp_vector.py
chapter06/: Chapter6.md
chapter06/examples/: anisotropic_diffusion.py  butterworth_filter.py  contours_2d.py  edge_detection.py  fft_spectrum.py  image_canvas.py  image_convolve.py  image_gaussian_smooth.py  image_gradient.py  image_grid_blend.py  image_logic.py  image_reslice.py  image_sinusoid.py  image_warp_scalar.py  median_filter.py  morphology.py
chapter07/: Chapter7.md
chapter07/examples/: lod_volume.py  shading_comparison.py  simple_ray_cast.py  volume_cropping.py
chapter08/: Chapter8.md
chapter08/examples/: boost_bfs.py  boost_centrality.py  boost_mst.py  create_tree.py  hello_world.py  vertex_degree.py
chapter08/examples/CreateTree/: CMakeLists.txt  CreateTree.cxx
chapter08/examples/HelloWorld/: CMakeLists.txt  HelloWorld.cxx
chapter08/examples/HelloWorld-Java/: HelloWorld.java
chapter09/: Chapter9.md
chapter09/examples/: geo_projection.py  geo_transform.py
chapter10/: Chapter10.md
chapter10/examples/: delaunay2d.py  gaussian_splatter.py  hello.py  ice_cream.py  reconstruct_surface.py  spring.py
chapter10/examples/Finance/: CMakeLists.txt  Finance.cxx
chapter11/: Chapter11.md
chapter12/: Chapter12.md
chapter13/: Chapter13.md
